Add GraphiQL client

--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,14 @@
       <groupId>org.geoserver.web</groupId>
       <artifactId>gs-web-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
@@ -285,6 +293,18 @@
         <groupId>org.geoserver.web</groupId>
         <artifactId>gs-web-core</artifactId>
         <version>${geoserver.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>2.5</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.12.4</version>
+        <scope>provided</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
