--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>de.terrestris</groupId>
   <artifactId>geoserver-graphql-service</artifactId>
-  <version>0.2.0</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Geoserver GraphQL service</name>
@@ -14,7 +14,7 @@
     <url>https://github.com/terrestris/geoserver-graphql-service</url>
     <connection>scm:git:git@github.com:terrestris/geoserver-graphql-service.git</connection>
     <developerConnection>scm:git:git@github.com:terrestris/geoserver-graphql-service.git</developerConnection>
-    <tag>v0.2.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <repositories>
@@ -63,7 +63,7 @@
     <sonar.host.url>https://sq.terrestris.de</sonar.host.url>
     <sonar.login>terrestris</sonar.login>
     <sonar.sources>src/main/</sonar.sources>
-    <geoserver.version>2.24.4</geoserver.version>
+    <geoserver.version>2.19.2</geoserver.version>
   </properties>
 
   <profiles>
