--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>de.terrestris</groupId>
   <artifactId>geoserver-graphql-service</artifactId>
-  <version>0.2.0</version>
+  <version>0.1.9-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Geoserver GraphQL service</name>
@@ -14,7 +14,6 @@
     <url>https://github.com/terrestris/geoserver-graphql-service</url>
     <connection>scm:git:git@github.com:terrestris/geoserver-graphql-service.git</connection>
     <developerConnection>scm:git:git@github.com:terrestris/geoserver-graphql-service.git</developerConnection>
-    <tag>v0.2.0</tag>
   </scm>
 
   <repositories>
